Fix for combobox icon stretching

--- a/docs/static/ds6/skin.css
+++ b/docs/static/ds6/skin.css
@@ -1035,6 +1035,7 @@ span.combobox__icon {
   height: 40px;
   width: 9px;
   background-size: 9px 40px;
+  background-size: 9px 5px;
 }
 @media screen and (-ms-high-contrast: white-on-black) {
   span.combobox__icon {
@@ -1052,6 +1053,7 @@ span.combobox__icon {
   height: 48px;
   width: 9px;
   background-size: 9px 48px;
+  background-size: 9px 5px;
 }
 .dialog[role="dialog"] {
   bottom: 0;
